# WarTurtles

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
TurtleEngine/: CMakeLists.txt  README.md
TurtleEngine/InputSystem/: UIEvents.cpp  UIEvents.h
TurtleEngine/include/: App.h  AudioManager.h  Scene.h  Scene.hxx  SceneManager.h  TextureManager.h
TurtleEngine/include/Components/: Component.h  Physic.h  Transform.h
TurtleEngine/include/Components/Collisions/: BoxCollisionComponent.h  CircleCollisionComponent.h  CollisionCallBacks.h  CollisionDispatcher.h  ContactPointsCollisionCallBacks.h  ContactPointsCollisionDispatcher.h  ICollisionComponent.h  PolygonCollisionComponent.h
TurtleEngine/include/Components/Renderer/: PolygonRenderer.h  ShapeRenderer.h  ShapeRenderer.hxx  SpriteAnimationRenderer.h  SpriteRenderer.h  TextRenderer.h
TurtleEngine/include/GameObjects/: BoxObject.h  CircleObject.h  GameObject.h  GameObject.hxx
TurtleEngine/include/Interfaces/: IActivable.h  IClickable.h  IDrawable.h  INamable.h  IObject.h
TurtleEngine/include/Managers/: AudioManager.h  FontManager.h  InputManager.h  PhysicManager.h  SceneManager.h  TextureManager.h
TurtleEngine/include/Types/: TransformMatrix.h  Vector2.h  Vector2.hxx
TurtleEngine/include/Types/Shapes/: BoxShape.h  CircleShape.h  IShape.h  PolygonShape.h
TurtleEngine/include/Utils/: Clock.h  Math.h  Singleton.h  String.h  Time.h  Window.h
TurtleEngine/src/: App.cpp  AudioManager.cpp  Scene.cpp  SceneManager.cpp  TextureManager.cpp
TurtleEngine/src/Components/: Component.cpp  Physic.cpp  Transform.cpp
TurtleEngine/src/Components/Collisions/: BoxCollisionComponent.cpp  (+7 more)
TurtleEngine/src/GameObjects/: BoxObject.cpp  CircleObject.cpp  GameObject.cpp
TurtleEngine/src/Interfaces/: IActivable.cpp  IClickable.cpp  INamable.cpp
TurtleEngine/src/Managers/: AudioManager.cpp  FontManager.cpp  InputManager.cpp  PhysicManager.cpp  SceneManager.cpp  TextureManager.cpp
TurtleEngine/src/Utils/: String.cpp  Time.cpp
(+33 files in other folders)
